made changes to folders. Added sort, search, and user-list

--- a/src/app/user/user-login/user-login.component.html
+++ b/src/app/user/user-login/user-login.component.html
@@ -16,8 +16,8 @@
         </div>
         <span>{{message}}</span>
         <div id="link-wrapper">
-            <a href="/logout">Forgot password?</a>
-            <a href="/logout">Register</a>
+            <a href="/login">Forgot password?</a>
+            <a href="/login">Register</a>
         </div>
     </div>
 </div>
