completed user-add and added user-get

--- a/src/app/menu/menu/menu.component.html
+++ b/src/app/menu/menu/menu.component.html
@@ -5,7 +5,7 @@
                 <a routerLink="{{m.route}}" [routerLinkActive]="['active']">{{m.display}}</a>
             </li>
             <li>
-                <a routerLink="./login" [routerLinkActive]="['active']"><i class="fa-regular fa-user"></i>LOG OUT</a>
+                <a routerLink="/login" [routerLinkActive]="['active']"><i class="fa-regular fa-user"></i>LOG OUT</a>
             </li>
         </ul>
     </nav>
