--- a/src/app/user/user-login/user-login.component.html
+++ b/src/app/user/user-login/user-login.component.html
@@ -14,7 +14,7 @@
         <div id="btn-container">
             <button class="btn btn-primary" (click)="login()">Login</button>
         </div>
-        <span>{{message}}</span>
+        <span id="login-error">{{message}}</span>
         <div id="link-wrapper">
             <a href="/login">Forgot password?</a>
             <a href="/login">Register</a>
