--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {
-    background: url("assets/imgs/sales-bg1.jpg");
+    background: url("assets/sales-bg1.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
