--- a/src/app/user/user-get/user-get.component.html
+++ b/src/app/user/user-get/user-get.component.html
@@ -1,1 +1,47 @@
-<p>user-get works!</p>
+<app-menu></app-menu>
+<div id="create-wrapper">
+    <div id="create-card">
+        <h3>{{user.firstname}} {{user.lastname}}</h3>
+        <div class="item">
+            <label for="">Firstname</label>
+            <input type="text" name="" id="" [(ngModel)]="user.firstname" readonly>
+        </div>
+        <div class="item">
+            <label for="">Lastname</label>
+            <input type="text" name="" id="" [(ngModel)]="user.lastname" readonly>
+        </div>
+        <div class="item">
+            <label for="">Username</label>
+            <input type="text" name="" id="" [(ngModel)]="user.username" readonly>
+        </div>
+        <div class="item">
+            <label for="">Password</label>
+            <input type="password" name="" id="" [(ngModel)]="user.password" readonly>
+        </div>
+        <div class="item">
+            <label for="">Phone</label>
+            <input type="text" name="" id="" [(ngModel)]="user.phone" readonly>
+        </div>
+        <div class="item">
+            <label for="">Email</label>
+            <input type="text" name="" id="" [(ngModel)]="user.email" readonly>
+        </div>
+        <div class="item item-checkbox">
+            <span class="checkbox-wrapper">
+                <label for="">Reviewer:</label>
+                <input type="checkbox" name="" id="" [(ngModel)]="user.isReviewer" onclick="return false">
+            </span>
+            <span class="checkbox-wrapper">
+                <label for="">Admin:</label>
+                <input type="checkbox" name="" id="" [(ngModel)]="user.isAdmin" onclick="return false">
+            </span>
+        </div>
+        <div id="btn-container">
+            <button class="btn btn-primary"><a [routerLink]="['/customers/edit/', user.id]">Edit</a></button>
+            <div id="del-btn-wrapper">
+                <button class="btn btn-danger" [class.hide]="toggleOn == true" (click)="toggleHide()">Delete</button>
+                <button class="btn btn-warning hide" (click)="removeUser()" [class.hide]="toggleOn == false" (click)="toggleHide()">Confirm</button>
+            </div>
+        </div>
+    </div>
+</div>
