--- a/src/app/user/user-get/user-get.component.css
+++ b/src/app/user/user-get/user-get.component.css
@@ -33,6 +33,7 @@
 }
 
 .item input {
+    color: silver;
     margin-left: 1rem;
     justify-self: right;
 }
@@ -77,4 +78,37 @@ input, input:focus {
     outline: none;
     border: none;
     border-bottom: 1px solid silver;
+}
+
+.checkbox {
+	-webkit-appearance: none;
+    appearance: none;
+	background-color: #fafafa;
+	border: 1px solid #cacece;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+	padding: 6px;
+	border-radius: 3px;
+	display: inline-block;
+	position: relative;
+}
+
+.checkbox:active .checkbox:checked:active {
+    background-color: silver;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+}
+
+.checkbox:checked {
+    background-color: #e9ecee;
+	border: 1px solid #adb8c0;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+	color: #99a1a7;
+}
+
+.checkbox:checked::after {
+    content: '\2714';
+	font-size: 8px;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	color: #99a1a7;
 }
