--- a/src/app/user/user-get/user-get.component.html
+++ b/src/app/user/user-get/user-get.component.html
@@ -29,15 +29,15 @@
         <div class="item item-checkbox">
             <span class="checkbox-wrapper">
                 <label for="">Reviewer:</label>
-                <input type="checkbox" name="" id="" [(ngModel)]="user.isReviewer" onclick="return false">
+                <input type="checkbox" name="" class="checkbox" [(ngModel)]="user.isReviewer" onclick="return false">
             </span>
             <span class="checkbox-wrapper">
                 <label for="">Admin:</label>
-                <input type="checkbox" name="" id="" [(ngModel)]="user.isAdmin" onclick="return false">
+                <input type="checkbox" name="" class="checkbox" [(ngModel)]="user.isAdmin" onclick="return false">
             </span>
         </div>
         <div id="btn-container">
-            <button class="btn btn-primary"><a [routerLink]="['/customers/edit/', user.id]">Edit</a></button>
+            <button class="btn btn-primary"><a [routerLink]="['/users/edit/', user.id]">Edit</a></button>
             <div id="del-btn-wrapper">
                 <button class="btn btn-danger" [class.hide]="toggleOn == true" (click)="toggleHide()">Delete</button>
                 <button class="btn btn-warning hide" (click)="removeUser()" [class.hide]="toggleOn == false" (click)="toggleHide()">Confirm</button>
