--- a/src/app/user/user-add/user-add.component.css
+++ b/src/app/user/user-add/user-add.component.css
@@ -26,7 +26,7 @@
 h3 {
     width: 100%;
     text-align: center;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     font-weight: 400;
     font-weight: 600;
 }
@@ -46,7 +46,7 @@ h3 {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: flex-start;
     border: 0;
     width: 280px;
@@ -61,14 +61,20 @@ h3 {
     position: relative;
 }
 .checkbox-wrapper input {
-    height:max-content;
+    height: max-content;
     max-width: 50px;
+    margin-left: 0.5rem;
+}
+
+.checkbox-wrapper:last-of-type {
+    transform: translateX(-4px);
 }
 
 .item input {
     width: 180px;
     border: none;
     margin-bottom: 0.3rem;
+    width: 100%;
 }
 
 .item input:focus {
@@ -77,10 +83,9 @@ h3 {
 
 #btn-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-arou;
     gap: 1rem;
     width: 100%;
-    margin-top: 1rem;
 }
 
 button, a {
