added vendor component, pipe, class, and service. added request-add

--- a/src/app/request/request-list/request-list.component.html
+++ b/src/app/request/request-list/request-list.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 <div id="table-wrapper">
     <div id="sub-menu">
-        <a id="add-user" routerLink="/request/add"><i class="fa-solid fa-plus"></i></a>
+        <a id="add-user" routerLink="/requests/add"><i class="fa-solid fa-plus"></i></a>
         <div id="search-wrapper">
             <i class="fa-solid fa-magnifying-glass"></i>
             <input type="search" [(ngModel)]="substr" placeholder="Search">
