--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 <div id="table-wrapper">
     <div id="sub-menu">
-        <a routerLink="/users/add" id="add-user"><i class="fa-solid fa-user-plus"></i></a>
+        <a routerLink="/users/add" id="add-entity"><i class="fa-solid fa-user-plus"></i></a>
         <div id="search-wrapper">
             <i class="fa-solid fa-magnifying-glass"></i>
             <input type="search" [(ngModel)]="substr" placeholder="Search">
