--- a/src/app/request/request-list/request-list.component.html
+++ b/src/app/request/request-list/request-list.component.html
@@ -22,8 +22,8 @@
             </tr>
         </thead>
         <tbody>
-            <!-- <tr *ngFor="let r of reqs | searchRequest:substr | sort:sortCol:sortAsc"> -->
-            <tr *ngFor="let r of reqs">
+            <tr *ngFor="let r of reqs | searchRequest:substr | sort:sortCol:sortAsc">
+            <!-- <tr *ngFor="let r of reqs"> -->
                 <td>{{r.id}}</td>
                 <td>{{r.description}}</td>
                 <td>{{r.justification}}</td>
