--- a/src/app/request/request-list/request-list.component.html
+++ b/src/app/request/request-list/request-list.component.html
@@ -27,7 +27,7 @@
                 <td>{{r.id}}</td>
                 <td>{{r.description}}</td>
                 <td>{{r.justification}}</td>
-                <td>{{r.rejectionReason}}</td>
+                <td class="status-rejected" id="reject-reason">{{r.rejectionReason}}</td>
                 <td>{{r.deliveryMode}}</td>
                 <td appStatusColor class="status">{{r.status}}</td>
                 <td>{{r.total | currency}}</td>
