added a login splash animation

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,2 +1,6 @@
 <app-menu></app-menu>
-<h4>Welcome {{user.firstname}}!</h4>
+<div id="table-wrapper">
+    <div id="sub-menu">
+        <h4>Welcome {{user.firstname}}!</h4>
+    </div>
+</div>
