--- a/src/app/core/home/home.component.css
+++ b/src/app/core/home/home.component.css
@@ -1,4 +1,34 @@
-h4 {
-    color: #555;
-    padding: 1.5rem;
+#sub-menu {
+    background-color: rgb(45, 121, 192);
+    display: flex;
+    align-items: center;
+    width: 100%;
+    /* height: 100% */
+    min-width: 453.63px;
 }
+
+#table-wrapper {
+    background-color: #ffff;
+    height: 100%;
+    margin: 2rem;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+
+h4 {
+    color: #ffff;
+    padding: 1.5rem;
+    margin: 0;
+}
+
+  
+  main {
+    flex: 1 0 auto;
+  }
+  
+  h1.title,
+  .footer-copyright a {
+    font-family: 'Architects Daughter', cursive;
+    text-transform: uppercase;
+    font-weight: 900;
+  }
