--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+    height: 100vh;
+}
+
 body {
     background: url("assets/sales-bg1.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    height: 80vh;
 }
 
 .btn-primary {
