completed requestline-add, added requestline-edit

--- a/src/app/request/request-lines/request-lines.component.html
+++ b/src/app/request/request-lines/request-lines.component.html
@@ -1,7 +1,7 @@
 <app-menu></app-menu>
 <div id="table-wrapper">
     <div id="sub-menu">
-        <a id="add-user" [routerLink]="['/requestline/add/', req.id]"><i class="fa-solid fa-cart-plus"></i></a>
+        <a id="add-user" [routerLink]="['/requestlines/add/', req.id]"><i class="fa-solid fa-cart-plus"></i></a>
     </div>
     <!-- Display Request -->
     <table class="table">
