--- a/src/app/requestline/requestline-edit/requestline-edit.component.html
+++ b/src/app/requestline/requestline-edit/requestline-edit.component.html
@@ -1,1 +1,24 @@
-<p>requestline-edit works!</p>
+<app-menu></app-menu>
+<div id="create-wrapper">
+    <div id="create-card">
+        <h3>Edit Request Line</h3>
+            <div class="item">
+                <label for="">Id:</label>
+                <input class="readonly" type="number" name="" id="" [(ngModel)]="rl.id" readonly>
+            </div>
+            <div class="item">
+                <label for="">Product:</label>
+                <select type="text" name="" id="" [(ngModel)]="rl.productId" >
+                    <option *ngFor="let p of prods" value="{{p.id}}">{{p.name}}</option>
+                </select>
+            </div>
+            <div class="item">
+                <label for="">Quantity:</label>
+                <input type="number" name="" id="" [(ngModel)]="rl.quantity">
+            </div>
+            <div id="btn-container">
+                <button class="btn btn-primary" (click)="save()">Submit</button>
+                <button class="btn btn-primary" (click)="goBack()">Back</button>
+            </div>
+    </div>
+</div>
