completed product-get

--- a/src/app/product/product-add/product-add.component.html
+++ b/src/app/product/product-add/product-add.component.html
@@ -17,7 +17,7 @@
             <div class="item">
                 <input type="text" [(ngModel)]="prod.photoPath" placeholder="Photo Path">
             </div>
-            <div class="item" id="item-select">
+            <div class="item" id="item-elect">
                 <select type="text" name="" id="" [(ngModel)]="prod.vendorId">
                     <option *ngFor="let v of vends" value="{{v.id}}">{{v.name}}</option>
                 </select>
