--- a/src/app/request/request-lines/request-lines.component.css
+++ b/src/app/request/request-lines/request-lines.component.css
@@ -73,6 +73,10 @@
     height: 100%;
 }
 
+.sfv {
+    min-width: 150px;
+}
+
 .btn-circle {
     background-color: #92adbd;
     text-align: center;
@@ -86,6 +90,7 @@
     /* border-bottom: 1px solid rgb(175, 175, 175); */
     transition: 0.25s all ease;
 }
+
 
 .btn-circle:first-of-type,
 .btn-circle:nth-of-type(2) {
