--- a/src/app/review/review/review.component.html
+++ b/src/app/review/review/review.component.html
@@ -33,7 +33,7 @@
                 <td>{{r.total | currency}}</td>
                 <td>{{r.user?.username}}</td>
                 <td>
-                    <a [routerLink]="['/requests/reviews/', r.id]">Review</a>
+                    <a [routerLink]="['/reviews/', r.id]">Review</a>
                 </td>
             </tr>
         </tbody>
