--- a/src/app/core/home/home.component.css
+++ b/src/app/core/home/home.component.css
@@ -32,3 +32,96 @@ h4 {
     text-transform: uppercase;
     font-weight: 900;
   }
+
+  #card-wrapper {
+    display: flex;
+  }
+
+
+  /* -*-*-*-*-*-*-*  GET USER CARD *-*-*-*-*-*-*- */
+
+  #create-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5rem;
+    width: 100vw;
+    height: 50vh;
+  }
+  
+  #create-card {
+    background-color: white;
+    display: grid;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    width: 350px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+    padding: 2rem;
+    margin: 2rem;
+    height: fit-content;
+}
+
+.fa-user-large {
+  color: silver;
+  margin-right: 1rem;
+  margin-left: 0.35rem;
+}
+
+.item {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.25rem;
+}
+
+.item-active {
+    width: 20%;
+}
+
+.item input {
+    color: silver;
+    margin-left: 1rem;
+    justify-self: right;
+}
+
+input, input:focus {
+    outline: none;
+    border: none;
+    border-bottom: 1px solid silver;
+}
+
+.checkbox {
+	-webkit-appearance: none;
+    appearance: none;
+	background-color: #fafafa;
+	border: 1px solid #cacece;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+	padding: 6px;
+	border-radius: 3px;
+	display: inline-block;
+	position: relative;
+}
+
+.checkbox:active .checkbox:checked:active {
+    background-color: silver;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
+}
+
+.checkbox:checked {
+    background-color: #e9ecee;
+	border: 1px solid #adb8c0;
+	box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05), inset 15px 10px -12px rgba(255,255,255,0.1);
+	color: #99a1a7;
+}
+
+.checkbox:checked::after {
+    content: '\2714';
+	font-size: 8px;
+	position: absolute;
+	top: 0px;
+	left: 0px;
+	color: #99a1a7;
+}
