--- a/src/app/request/request-list/request-list.component.css
+++ b/src/app/request/request-list/request-list.component.css
@@ -106,3 +106,7 @@ a#add-user:hover {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
 }
+
+.disabled {
+    color: silver;
+}
