added security only allow logged in users to access components

--- a/src/app/core/e404/e404.component.html
+++ b/src/app/core/e404/e404.component.html
@@ -1,1 +1,5 @@
-<app-menu></app-menu>
+<div id="error-wrapper">
+    <div class="text-card">
+        <div class="error">404 Page Not Found</div>
+    </div>
+</div>
